fix: remove hiding overflow on Box (#1571)

--- a/src/components/Box/Box.module.scss
+++ b/src/components/Box/Box.module.scss
@@ -13,8 +13,6 @@
     --roundness-small: var(--border-radius-squarer);
     --roundness-medium: var(--border-radius-rounder);
     --roundness-large: var(--border-radius-roundest);
-
-    overflow: hidden;
 }
 
 @each $size in $sizes {
